--- a/submission-lab2.1/lab2/main/templates/base.html
+++ b/submission-lab2.1/lab2/main/templates/base.html
@@ -155,16 +155,34 @@
                             <li><a href="shop-single-thumb-only.html">Shop Single Version Two</a></li>
                         </ul>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'profile' %}">Profile</a></li>
+                            <li><a href="{% url 'change_password' %}">Chaneg Password</a></li>
+                            <li><form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+                                {% csrf_token %}
+                                <button type="submit">Logout</button>
+                            </form>
+                            <li><a href="#" onclick="document.getElementById('logout-form').submit();">Logout</a></li>
+                    
+                        </ul>
+                    </li>
+                    {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
                 </ul>
             </div><!-- /.navbar-collapse -->
 
             <div class="attr-right">
                 <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
-                    <ul>
-                        <li class="button"><a href="login.html">Login</a></li>
-                    </ul>
-                </div>
+            <div class="attr-nav">
+                <ul>
+                </ul>
+            </div>
                 <!-- End Atribute Navigation -->
             </div>
 
