--- a/submission-lab2.1/lab2/main/templates/about-us.html
+++ b/submission-lab2.1/lab2/main/templates/about-us.html
@@ -2,16 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
+{% load i18n %}
 
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Appku - Software Landing Page">
+    <meta name="description" content= "Appku - Software Landing Page">
     {% load static %}
     <!-- ========== Page Title ========== -->
-    <title>Appku - Software Landing Page</title>
+    <title>{% trans "Appku - Software Landing Page" %}</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}" type="image/x-icon">
@@ -52,16 +53,17 @@
     {% block content %}
     <!-- End Header -->
 
-     <!-- Start Breadcrumb 
+    <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area shadow dark bg-cover text-center text-light" style="background-image: url(assets/img/2440x1578.png);">
+    <div class="breadcrumb-area shadow dark bg-cover text-center text-light"
+        style="background-image: url(assets/img/2440x1578.png);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12">
-                    <h1>About Us</h1>
+                    <h1>{% trans "About Us" %}</h1>
                     <ul class="breadcrumb">
-                        <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-                        <li>About</li>
+                        <li><a href="#"><i class="fas fa-home"></i> {% trans "Home" %}</a></li>
+                        <li>{% trans "About" %}</li>
                     </ul>
                 </div>
             </div>
@@ -74,7 +76,7 @@
     <div id="about" class="about-area bg-gray default-padding">
         <!-- Shape -->
         <div class="fixed-shape-left">
-            <img src="{% static 'assets/img/shape/9.png' %}" alt="Shape">
+            <img src="{% static 'assets/img/shape/9.png' %}" alt="{% trans " Shape" %}">
         </div>
         <!-- End Shape -->
         <div class="container">
@@ -82,30 +84,38 @@
                 <div class="row align-center">
                     <div class="col-lg-6">
                         <div class="thumb">
-                            <img class="wow fadeInLeft" data-wow-delay="300ms" src="{% static 'assets/img/dashboard/5.png' %}" alt="Thumb">
-                            <img class="wow fadeInUp" data-wow-delay="500ms" src="{% static 'assets/img/dashboard/6.png' %}" alt="Thumb">
+                            <img class="wow fadeInLeft" data-wow-delay="300ms"
+                                src="{% static 'assets/img/dashboard/5.png' %}" alt="{% trans " Thumb" %}">
+                            <img class="wow fadeInUp" data-wow-delay="500ms"
+                                src="{% static 'assets/img/dashboard/6.png' %}" alt="{% trans " Thumb" %}">
                         </div>
                     </div>
                     <div class="col-lg-6 info wow fadeInRight">
-                        <h4>Story about us</h4>
-                        <h2>Perfect place to Design, Development, Software.</h2>
+                        <h4>{% trans "Story about us" %}</h4>
+                        <h2>{% trans "Perfect place to Design, Development, Software." %}</h2>
                         <ul>
                             <li>
-                                <h5>Free Download App</h5>
+                                <h5>{% trans "Free Download App" %}</h5>
+                                {% blocktrans %}
                                 <p>
-                                    Fruit defer in party me built under first. Forbade him but savings sending ham general. So play do in near park that pain. 
+                                    This is a longer paragraph of text that needs to be translated into different languages.
+                                    It contains multiple sentences and possibly some variables like {{ variable_name }}.
                                 </p>
+                                {% endblocktrans %}
                             </li>
                             <li>
-                                <h5>Trusted and Reliable</h5>
+                                <h5>{% trans "Trusted and Reliable" %}</h5>
+                                {% blocktrans %}
                                 <p>
-                                    Fruit defer in party me built under first. Forbade him but savings sending ham general. So play do in near park that pain. 
+                                    This is a longer paragraph of text that needs to be translated into different languages.
+                                    It contains multiple sentences and possibly some variables like {{ variable_name }}.
                                 </p>
+                                {% endblocktrans %}
                             </li>
                         </ul>
                         <div class="button">
-                            <a class="btn circle btn-theme-effect btn-sm" href="#">Start free trial</a>
-                            <a href="#">See all features</a>
+                            <a class="btn circle btn-theme-effect btn-sm" href="#">{% trans "Start free trial" %}</a>
+                            <a href="#">{% trans "See all features" %}</a>
                         </div>
                     </div>
                 </div>
@@ -124,25 +134,25 @@
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
                             <div class="timer" data-to="687" data-speed="5000">687</div>
-                            <span class="medium">Projects Completed</span>
+                            <span class="medium">{% trans "Projects Completed" %}</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
                             <div class="timer" data-to="655" data-speed="5000">655</div>
-                            <span class="medium">Active clients</span>
+                            <span class="medium">{% trans "Active clients" %}</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
                             <div class="timer" data-to="450" data-speed="5000">450</div>
-                            <span class="medium">Cups of coffee</span>
+                            <span class="medium">{% trans "Cups of coffee" %}</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
                             <div class="timer" data-to="1200" data-speed="5000">1200</div>
-                            <span class="medium">Happy clients</span>
+                            <span class="medium">{% trans "Happy clients" %}</span>
                         </div>
                     </div>
                 </div>
@@ -158,10 +168,11 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="site-heading text-center">
-                        <h2>Innovative Team</h2>
+                        <h2>{% trans "Innovative Team" %}</h2>
                         <div class="devider"></div>
                         <p>
-                            Outlived no dwelling denoting in peculiar as he believed. Behaviour excellent middleton be as it curiosity departure ourselves very extreme future. 
+                            {% trans "Outlived no dwelling denoting in peculiar as he believed. Behaviour excellent
+                            middleton be as it curiosity departure ourselves very extreme future." %}
                         </p>
                     </div>
                 </div>
@@ -174,7 +185,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="{% trans " Thumb" %}">
                                 <div class="social">
                                     <input type="checkbox" id="toggle" class="share-toggle" hidden>
                                     <label for="toggle" class="share-button">
@@ -192,8 +203,8 @@
                                 </div>
                             </div>
                             <div class="info">
-                                <h4>Ahem Natasha</h4>
-                                <span>Operations officer</span>
+                                <h4>{% trans "Ahem Natasha" %}</h4>
+                                <span>{% trans "Operations officer" %}</span>
                             </div>
                         </div>
                     </div>
@@ -202,7 +213,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="{% trans " Thumb" %}">
                                 <div class="social">
                                     <input type="checkbox" id="toggle2" class="share-toggle" hidden>
                                     <label for="toggle2" class="share-button">
@@ -220,8 +231,8 @@
                                 </div>
                             </div>
                             <div class="info">
-                                <h4>Devid mark</h4>
-                                <span>Graphic designer</span>
+                                <h4>{% trans "Devid Mark" %}</h4>
+                                <span>{% trans "Graphic designer" %}</span>
                             </div>
                         </div>
                     </div>
@@ -230,7 +241,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="{% trans " Thumb" %}">
                                 <div class="social">
                                     <input type="checkbox" id="toggle3" class="share-toggle" hidden>
                                     <label for="toggle3" class="share-button">
@@ -248,8 +259,8 @@
                                 </div>
                             </div>
                             <div class="info">
-                                <h4>Brave Hammam</h4>
-                                <span>Web developer</span>
+                                <h4>{% trans "Brave Hammam" %}</h4>
+                                <span>{% trans "Web developer" %}</span>
                             </div>
                         </div>
                     </div>
@@ -266,31 +277,33 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-6 thumb">
-                    <img src="{% static 'assets/img/illustration/2.png' %}" alt="dashboard">
+                    <img src="{% static 'assets/img/illustration/2.png' %}" alt="{% trans " dashboard" %}">
                 </div>
-                
+
                 <div class="col-lg-6 info">
                     <div class="item-box">
-                        <h4>Why Choose us</h4>
-                        <h2>Create your app page <br> With expert developer</h2>
+                        <h4>{% trans "Why Choose us" %}</h4>
+                        <h2>{% trans "Create your app page With expert developer" %}</h2>
                         <p>
-                            Journey greatly or garrets. Draw door kept do so come on open mean. Estimating stimulated how reasonably precaution diminution she simplicity sir but. Questions am sincerity zealously concluded consisted or no gentleman it. 
+                            {% trans "Journey greatly or garrets. Draw door kept do so come on open mean. Estimating
+                            stimulated how reasonably precaution diminution she simplicity sir but. Questions am
+                            sincerity zealously concluded consisted or no gentleman it." %}
                         </p>
                         <ul>
                             <li>
                                 <i class="fas fa-layer-group"></i>
-                                <h5>Friendly Interface</h5>
+                                <h5>{% trans "Friendly Interface" %}</h5>
                             </li>
                             <li>
                                 <i class="fas fa-fingerprint"></i>
-                                <h5>Strong Encryption</h5>
+                                <h5>{% trans "Strong Encryption" %}</h5>
                             </li>
                         </ul>
                         <div class="progress-box">
-                            <h5>Success Rate</h5>
+                            <h5>{% trans "Success Rate" %}</h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-width="78">
-                                     <span>78%</span>
+                                    <span>78%</span>
                                 </div>
                             </div>
                         </div>
@@ -325,4 +338,5 @@
     <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
+
 </html>
